ROS CFDP Application is now working with the loopback configuration. Bridge mappings are required for testing against the cFE CFDP application.

--- a/cfdp_msgs/CMakeLists.txt
+++ b/cfdp_msgs/CMakeLists.txt
@@ -16,9 +16,10 @@ find_package(std_msgs REQUIRED)
 find_package(rclpy REQUIRED)
 
 rosidl_generate_interfaces(${PROJECT_NAME}
-  "msg/CfdpMdpu.msg"
+  "msg/CfdpPdu.msg"
   "srv/CfdpCmd.srv"
   "srv/CfdpXfrCmd.srv"
+  DEPENDENCIES std_msgs
   )
 
 if(BUILD_TESTING)
